--- a/MyPortfolio/MyPortfolio/Web.config
+++ b/MyPortfolio/MyPortfolio/Web.config
@@ -81,7 +81,7 @@
   <system.net>
     <mailSettings>
       <smtp from="kirstinwalsh0805@gmail.com">
-        <network host="smtp.gmail.com" port="587" userName="kirstinwalsh0805@gmail.com" password="dragongg830" enableSsl="true" />
+        <network host="smtp.gmail.com" port="587" userName="kirstinwalsh0805@gmail.com" password="*********" enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
